# image_to_text

./: pyproject.toml
